Sampling tool support